--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <script src="script.js"></script>
-</body>
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <main>
+      <h1>ROCK, PAPER, SCISSORS</h1>
+      <section>
+        <h2>Make your selection</h2>
+        <button class="selection-btn">Rock</button>
+        <button class="selection-btn">Paper</button>
+        <button class="selection-btn">Scissors</button>
+      </section>
+    </main>
+  </body>
 </html>
