add container for scores

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <button class="selection-btn">Paper</button>
         <button class="selection-btn">Scissors</button>
       </section>
+      <div id="results">
+          <h2>Player</h2>
+          <p id="score-player">0</p>
+          <h2>Computer</h2>
+          <p id="score-computer">0</p>
+      </div>
     </main>
   </body>
 </html>
