add paragraph to show current win

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class="selection-btn">Scissors</button>
       </section>
       <div id="results">
+          <p id="current-status"></p>
           <h2>Player</h2>
           <p id="score-player">0</p>
           <h2>Computer</h2>
